disabled in input

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="container-padre">
 			
 		<div class="ingreso container col-6">
-			<input class="form-control col-6" type="text" aria-label=".form-control-lg example">		
+			<input class="form-control col-6" type="text" aria-label=".form-control-lg example" disabled>		
 		</div>
 		<div class="container botones ">
 			<div class="btn-group col-6" role="group" aria-label="Basic example">
